--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,25 +14,37 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+env:
+  NODE_ENV: production
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: npm
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
         with:
           static_site_generator: next
+
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install
+          npm ci
+
       - name: Build with Next.js
-        run: npm run build
+        run: |
+          npm run build
+          touch out/.nojekyll
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
