--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,14 +36,10 @@ jobs:
           static_site_generator: next
 
       - name: Install dependencies
-        run: |
-          npm install
-          npm ci
+        run: npm ci
 
       - name: Build with Next.js
-        run: |
-          npm run build
-          touch out/.nojekyll
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
