--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
