--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,9 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn",
-    "@next/next/no-img-element": "warn",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@next/next/no-img-element": "off",
     "@typescript-eslint/ban-ts-comment": "off"
   }
 }
