--- a/package.json
+++ b/package.json
@@ -7,23 +7,36 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "node -r dotenv/config ./db/migrate.js",
+    "export": "next export",
+    "db:migrate": "node -r dotenv/config ./db/migrate.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.37.4",
+    "@clerk/nextjs": "^4.29.3",
+    "@neondatabase/serverless": "^0.10.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.46.2",
+    "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
