--- a/package.json
+++ b/package.json
@@ -7,18 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:push": "node -r dotenv/config ./db/migrate.js",
-    "export": "next export",
-    "db:migrate": "node -r dotenv/config ./db/migrate.ts"
+    "export": "next export"
   },
   "dependencies": {
     "@auth/core": "^0.37.4",
     "@clerk/nextjs": "^4.29.3",
-    "@neondatabase/serverless": "^0.10.4",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.46.2",
-    "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "nodemailer": "^6.9.16",
@@ -36,7 +29,6 @@
     "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.0.1",
     "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
